--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Omid's Notes
 # logo: "/assets/images/omid.jpg"
 email: omid9h@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Here is a collection of my notes and documentations as a reference and mostly about Python and Software Engineering stuff.
+  Here is a collection of my notes and documentations which will be used as a reference. They are mostly about Python and Software Engineering stuff.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: omid9h
@@ -54,3 +54,8 @@ plugins:
 #   - vendor/ruby/
 
 search_enabled: true
+
+# Split pages into sections that can be searched individually
+# Supports 1 - 6, default: 2
+search.heading_level: 2
+
