--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,22 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Omid's Notes
+# logo: "/assets/images/omid.jpg"
+email: omid9h@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Here is a collection of my notes and documentations which will be used as a reference. They are mostly about Python and Software Engineering stuff.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: ""  # the base hostname and protocol for your site, e.g. http://example.com
+
+# domain: omid9h.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+# url: https://omid9h.github.io/  # the base hostname and protocol for your site, e.g. http://example.com
+
+twitter_username: omid9h
+github_username:  omid9h
 
 # Build settings
-theme: minima
+theme: "just-the-docs"
 plugins:
   - jekyll-feed
 
@@ -53,3 +56,10 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+search_enabled: true
+
+# Split pages into sections that can be searched individually
+# Supports 1 - 6, default: 2
+search.heading_level: 2
+
