--- a/_config_local.yml
+++ b/_config_local.yml
@@ -63,3 +63,8 @@ search_enabled: true
 # Supports 1 - 6, default: 2
 search.heading_level: 2
 
+# Back to top link
+back_to_top: true
+back_to_top_text: "Back to top"
+
+footer_content: "Omid Gholami <a href=\"https://github.com/omid9h\">GitHub</a>"
