--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ github_username:  omid9h
 # Build settings
 # theme: "just-the-docs"
 remote_theme: pmarsceill/just-the-docs
+
+# color_scheme: dark
+
 plugins:
   - jekyll-feed
 
